Setup for Task2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,7 +97,7 @@ display_variable(CMAKE_BUILD_TYPE)
 display_variable(CMAKE_CONFIGURATION_TYPES)
 display_variable(CMAKE_CXX_FLAGS)
 display_variable(CMAKE_CXX_FLAGS_DEBUG)
-display_variable(CMAKE_CXX_FLAGS_RELEASE "-O2")
+display_variable(CMAKE_CXX_FLAGS_RELEASE "-fast")
 display_variable(CMAKE_CXX_FLAGS_MINSIZEREL)
 display_variable(CMAKE_CXX_FLAGS_RELWITHDEBINFO)
 display_variable(CMAKE_VERBOSE_MAKEFILE)
