Setup for Task2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,10 +97,11 @@ display_variable(CMAKE_BUILD_TYPE)
 display_variable(CMAKE_CONFIGURATION_TYPES)
 display_variable(CMAKE_CXX_FLAGS)
 display_variable(CMAKE_CXX_FLAGS_DEBUG)
-display_variable(CMAKE_CXX_FLAGS_RELEASE "-O0")
+display_variable(CMAKE_CXX_FLAGS_RELEASE)
 display_variable(CMAKE_CXX_FLAGS_MINSIZEREL)
 display_variable(CMAKE_CXX_FLAGS_RELWITHDEBINFO)
 display_variable(CMAKE_VERBOSE_MAKEFILE)
+add_compile_options(-O0)
 
 display_subseparator("Options to Build")
 display_variable(BUILD_SHARED_LIBS)
