Setup for Task2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,7 @@ set(CMAKE_POSITION_INDEPENDENT_CODE OFF)
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT ${META_PROJECT_NAME})
-
+add_compile_options(-Wall -O0)
 option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
 
 set(OPT_WARNINGS_AS_ERRORS OFF CACHE BOOL "" FORCE)
