--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,7 +73,13 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
 
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -qopt-report=1 -qopt-report-file=*.txt -qopt-report-filter=FWaveSolver.cpp;Block.cpp;WavePropagationBlock.cpp;WaveAccumulationBlock.cpp;DimensionalSplitting.cpp;DimensionalSplitting-Runner.cpp")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
+
+foreach(file ${SOURCE_FILES})
+    get_filename_component(filename ${file} NAME_WE)
+    set(report_file "${REPORTS_DIR}/${filename}_opt_report.txt")
+    add_executable(${filename} ${file})
+    target_compile_options(${filename} PRIVATE -O2 -qopt-report=2 -qopt-report-file=${report_file})
 
 add_subdirectory(CMake)
 include(MessageUtils)
