Setup for Task2 Cmake debug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,8 +85,11 @@ file(MAKE_DIRECTORY ${REPORTS_DIR})
 foreach(file ${SOURCE_FILES})
     get_filename_component(filename ${file} NAME_WE)
     set(report_file "${REPORTS_DIR}/${filename}_opt_report.txt")
-    add_executable(${filename} ${file})
     target_compile_options(${filename} PRIVATE -O3 -qopt-report=2 -qopt-report-file=${report_file})
+
+    message(filename="$${file}")
+    message(report_file="${REPORTS_DIR}/${filename}_opt_report.txt")
+    message(compile_options="${filename} PRIVATE -O3 -qopt-report=2 -qopt-report-file=${report_file}")
 endforeach()
 
 add_subdirectory(CMake)
