Setup for Task2 Cmake debug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,7 +75,7 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
 
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
 
-set(SRC_DIR "${CMAKE_SOURCE_DIR}/Source")
+set(SRC_DIR "${CMAKE_SOURCE_DIR}")
 
 file(GLOB SOURCE_FILES "${SRC_DIR}/*.cpp")
 
