--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,9 +75,9 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
 
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
 
-set(SRC_DIR "${CMAKE_SOURCE_DIR}")
+set(SRC_DIR2 "/dss/dsshome1/lxc02/di29way/Task2/SWE")
 
-file(GLOB SOURCE_FILES "${SRC_DIR}/*.cpp")
+file(GLOB SOURCE_FILES "${SRC_DIR2}/*.cpp")
 
 set(REPORTS_DIR "${CMAKE_BINARY_DIR}/optimization_reports")
 file(MAKE_DIRECTORY ${REPORTS_DIR})
