--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,7 +75,7 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
 
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
 
-set(SRC_DIR2 "/dss/dsshome1/lxc02/di29way/Task2/SWE")
+set(SRC_DIR2 "${CMAKE_SOURCE_DIR}")
 
 file(GLOB SOURCE_FILES "${SRC_DIR2}/*.cpp")
 
@@ -85,7 +85,10 @@ file(MAKE_DIRECTORY ${REPORTS_DIR})
 foreach(file ${SOURCE_FILES})
     get_filename_component(filename ${file} NAME_WE)
     set(report_file "${REPORTS_DIR}/${filename}_opt_report.txt")
+
+    add_executable(${filename} ${file})
     target_compile_options(${filename} PRIVATE -O3 -qopt-report=2 -qopt-report-file=${report_file})
+
 
     message(filename="$${file}")
     message(report_file="${REPORTS_DIR}/${filename}_opt_report.txt")
