Setup for Task2 Cmake debug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,7 +75,7 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
 
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
 
-set(SRC_DIR2 "${CMAKE_SOURCE_DIR}")
+set(SRC_DIR2 "/dss/dsshome1/lxc02/di29way/Task2/SWE/build")
 
 file(GLOB SOURCE_FILES "${SRC_DIR2}/*.cpp")
 
