Setup for Task2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,7 +73,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
 
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -qopt-report=2")
 
 add_subdirectory(CMake)
 include(MessageUtils)
@@ -121,7 +121,7 @@ function(add_qopt_report_target TARGET_NAME SOURCE_FILE)
     set(QOPT_REPORT_FILE "${CMAKE_BINARY_DIR}/${SOURCE_FILENAME}.qopt-report.txt")
     add_custom_command(
             OUTPUT ${QOPT_REPORT_FILE}
-            COMMAND ${CMAKE_CXX_COMPILER} <INTEL_COMPILER_FLAGS> -qopt-report=2 -c ${SOURCE_FILE} -o ${CMAKE_BINARY_DIR}/${SOURCE_FILENAME}.o
+            COMMAND ${CMAKE_CXX_COMPILER} <INTEL_COMPILER_FLAGS> -qopt-report=1 -c ${SOURCE_FILE} -o ${CMAKE_BINARY_DIR}/${SOURCE_FILENAME}.o
             COMMAND ${CMAKE_CXX_COMPILER} <INTEL_COMPILER_FLAGS> -qopt-report-phase=vec -qopt-report-file=${QOPT_REPORT_FILE} -c ${SOURCE_FILE}
             DEPENDS ${SOURCE_FILE}
             COMMENT "Generating qopt-report for ${SOURCE_FILE}"
